fix: title icon alignment

--- a/src/main/frontend/components/header.css
+++ b/src/main/frontend/components/header.css
@@ -14,6 +14,7 @@
   right: 0;
   user-select: none;
   transition: width 0.3s;
+  line-height: 1;
 
   .it svg {
     transform: scale(0.8);
